--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>dad-joke-app</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/javascript.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>dad-joke-app</title>
+    </head>
+    <body>
+        <section class="joke-body">
+            <div class="container">
+                <p class="tool-bar-popup" id="tool-bar-popup"></p>
+                <div class="tool-bar">
+                
+                    <button class="tool-btn" id="copy-joke-btn" title="Copy to clipboard">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-copy-icon lucide-copy"><rect width="14" height="14" x="8" y="8" rx="2" ry="2"/><path d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"/></svg>
+                    </button>
+                    <button class="tool-btn" id="save-joke-btn" title="Save joke">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-bookmark-icon lucide-bookmark"><path d="m19 21-7-4-7 4V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v16z"/></svg>
+                    </button>
+                </div>
+                <div class="display" id="joke-display"></div>
+                <button class="joke-btn" id="random-joke-btn">Get random joke</button>
+            </div>
+        </section>
+        <script type="module" src="/src/main.js"></script>
+    </body>
 </html>
